--- a/gunicorn.service
+++ b/gunicorn.service
@@ -7,6 +7,7 @@ User=fastapi
 Group=fastapi
 WorkingDirectory=/app/src
 Environment="PATH=/app/.venv/bin"
+EnvironmentFile=/app/.env
 ExecStart=/app/.venv/bin/gunicorn -w4 -k uvicorn.workers.UvicornWorker app.main:app --bind 0.0.0.0:8000
 
 [Install]
