--- a/compose.yml
+++ b/compose.yml
@@ -16,10 +16,8 @@ services:
       - ./.pgenv
     ports: 
       - 5432:5432
-    volumes:
-      - type: volume
-        source: ./pgdata
-        target: /var/lib/postgresql/data
+    volumes: 
+      - ./pgdata:/var/lib/postgresql/data
     healthcheck:
       test: ["CMD-SHELL", "pg_isready"]
       interval: 10s
